# SpecGuard_PY_DevOps

./: .gitignore  README.md
python-server/: .gitignore  README.md  pyproject.toml  requirements.txt  run.py  sitecustomize.py  test.py  tmp_dbcheck.py
python-server/app/: db.py  main.py  schemas.py
python-server/app/core/: errors.py
python-server/app/crawlers/: __init__.py  velog_crawler.py
python-server/app/routers/: crawlingResult.py  keywords.py  summary.py  velog.py
python-server/app/services/: crawler_service.py  gemini_client.py  gemini_service.py
python-server/app/utils/: codec.py  dates.py  text.py
