[project]
name = "pythonbackend"
version = "0.1.0" 
description = ""
authors = [
    {name = "viroovr",email = "tjgusdnjs789@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.116,<0.117",
    "uvicorn>=0.35,<0.36",
    "httpx>=0.28,<0.29",
    "playwright>=1.54,<2.0",
    "python-dotenv>=1.1,<2.0",

    "sqlalchemy>=2.0,<3.0",
    "pymysql>=1.1,<2.0",
    "aiomysql>=0.2,<0.3",
    "asyncmy>=0.2,<0.3",

    "requests>=2.32,<3.0",
    "pydantic>=2.11",
    "pydantic-settings>=2.10",
    "google-genai>=1.38,<2.0",

    "tzdata>=2025.2,<2026.0"
]

[tool.poetry]
packages = [{ include = "app" }] 

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# 아래 섹션은 black의 설정
[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# 아래 섹션은 flake8의 설정
[tool.flake8]
ignore = "E203, E501, W503"
max-line-length = 88
exclude = ".git,__pycache__,docs/,old/,build/,dist/"
